<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/eight">

    <ImageView
        android:contentDescription="@string/songPic"
        android:id="@+id/songImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/music"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/oneSix">

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textStyle="bold"
            tools:text="Song Name" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Artist Name"/>
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/download"
        android:layout_marginStart="@dimen/oneFiveZero"/>

    <ImageView
        android:contentDescription="@string/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_black_24dp"
        android:layout_marginLeft="@dimen/oneZero"/>

</LinearLayout>